calico-config-manifests/network-policy-allow-engress-from-backend-mushroom-to-external-postgress.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-egress-external-postgres-db
  namespace: backend
spec:
  selector: all()
  types:
    - Egress
  egress:
    - action: Allow
      destination:
        nets:
          - 0.0.0.0/0
        # port:
        #   - 5432
