calico-config-manifests/network-policy-allow-engress-frontend-to-backend-port-80.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-egress-to-backend-port-80
  namespace: frontend
spec:
  selector: all() 
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: 'projectcalico.org/name == "backend"'
        ports:
          - 80
