calico-config-manifests/network-policy-allow-ingress-backend-to-database-port-80.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default.allow-backend-to-database-only-port-80
  namespace: database
spec:
  selector: all()
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: 'projectcalico.org/name == "backend"'
      destination:
        ports:
          - 80
