calico-config-manifests/network-policy-allow-ingress-frontend-to-backend-port-80.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend-only-port-80
  namespace: backend
spec:
  selector: all()  # Aplica-se a todos os pods no namespace backend
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: 'projectcalico.org/name == "frontend"'  # Permite tráfego somente do namespace frontend
      destination:
        ports:
          - 80  # Permite somente a porta 80
