calico-config-manifests/network-policy-engress-backend-to-database-port-80.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default.allow-egress-from-backend-to-database-port-80
  namespace: backend
spec:
  selector: all() 
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: 'projectcalico.org/name == "database"'
        ports:
          - 80
